--- a/application/raptor/localization/text/text-retrieve-modal.html
+++ b/application/raptor/localization/text/text-retrieve-modal.html
@@ -13,12 +13,12 @@
                     <input class="form-control" name="keyword" readonly value="{{ record['keyword']|e }}" maxlength="128" placeholder="" type="text" autocomplete="off">
                 </div>
             </div>
-            {% for code,lang in localization.language %}
+            {% for code,language in localization.language %}
             <div class="row mb-2">
                 <label class="col-3 col-form-label text-end">
-                    {{ 'title'|text }} ({{ lang }}
+                    {{ 'title'|text }} ({{ language['title'] }}
                     {% set flag = code == 'en' ? 'us' : code %}
-                    <img src="https://flagcdn.com/20x15/{{ flag }}.png" srcset="https://flagcdn.com/40x30/{{ flag }}.png 2x" width="16" height="12" alt="{{ lang|e }}">)
+                    <img src="https://flagcdn.com/20x15/{{ flag }}.png" srcset="https://flagcdn.com/40x30/{{ flag }}.png 2x" width="16" height="12" alt="{{ language['title']|e }}">)
                 </label>
                 <div class="col-9">
                     <textarea class="form-control" disabled name="text[{{ code }}]" required maxlength="255">{{ record['localized']['text'][code] }}</textarea>
