--- a/application/raptor/authentication/login.html
+++ b/application/raptor/authentication/login.html
@@ -82,8 +82,8 @@
                 </div>
  
                 <div class="mt-3">
-                    <button class="btn btn-primary shadow-sm float-left" id="forgot_password_submit">{{ 'request'|text }}</button>
-                    <button class="cancel btn btn-secondary shadow-sm float-right" type="button">{{ 'cancel'|text }}</button>
+                    <button class="btn btn-primary shadow-sm float-start" id="forgot_password_submit">{{ 'request'|text }}</button>
+                    <button class="cancel btn btn-secondary shadow-sm float-end" type="button">{{ 'cancel'|text }}</button>
                 </div>
             </form>
 
