--- a/application/raptor/content/file/index-files.html
+++ b/application/raptor/content/file/index-files.html
@@ -228,8 +228,8 @@
         fetch(
             `{{ 'files-list'|link({'table': table}) }}`
         ).then(res => {
-            let contentType = res.headers.get('content-type');
-            if (contentType.indexOf('application/json') !== -1) {
+            let contentType = res.headers.get('content-type') || '';
+            if (contentType.includes('application/json')) {
                 return res.json();
             }
             throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
@@ -286,7 +286,7 @@
                     }
                 },
                 UploadProgress: function (up, file) {
-                    document.getElementById(file.id).getElementsByTagName('b')[0].innerHTML = `<i class="bi bi-upload"> sending ${file.percent}%`;
+                    document.getElementById(file.id).getElementsByTagName('b')[0].innerHTML = `<i class="bi bi-upload"></i> sending ${file.percent}%`;
                     uploadFilesBtn.setAttribute('disabled', '');
                 },
                 FileUploaded: function (up, file, response) {
@@ -323,7 +323,7 @@
 
                         let currentFile = document.getElementById(file.id);
                         if (currentFile !== null) {
-                            currentFile.getElementsByTagName('b')[0].innerHTML = '<i class="bi bi-x"> error';
+                            currentFile.getElementsByTagName('b')[0].innerHTML = '<i class="bi bi-x"></i> error';
                             currentFile.getElementsByTagName('em')[0].innerHTML = err;
                             currentFile.classList.add('text-danger');
                         }
@@ -350,7 +350,7 @@
                     if (err.file.id !== null) {
                         let currentFile = document.getElementById(err.file.id);
                         if (currentFile !== null) {
-                            currentFile.getElementsByTagName('b')[0].innerHTML = '<i class="bi bi-x"> failed';
+                            currentFile.getElementsByTagName('b')[0].innerHTML = '<i class="bi bi-x"></i> failed';
                             currentFile.getElementsByTagName('em')[0].innerHTML = err.message;
                             currentFile.classList.add('text-danger');
                         }
