--- a/application/raptor/content/file/index.html
+++ b/application/raptor/content/file/index.html
@@ -145,8 +145,8 @@
         fetch(
             `{{ 'files-list'|link({'table': table}) }}`
         ).then(res => {
-            let contentType = res.headers.get('content-type');
-            if (contentType.indexOf('application/json') !== -1) {
+            let contentType = res.headers.get('content-type') || '';
+            if (contentType.includes('application/json')) {
                 return res.json();
             }
             throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
