--- a/application/raptor/localization/language/language-update-modal.html
+++ b/application/raptor/localization/language/language-update-modal.html
@@ -100,8 +100,8 @@
                     method: this.getAttribute('method') ?? 'PUT'
                 }
             ).then(res => {
-                let contentType = res.headers.get('content-type');
-                if (contentType.indexOf('application/json') !== -1) {
+                let contentType = res.headers.get('content-type') || '';
+                if (contentType.includes('application/json')) {
                     return res.json();
                 }
                 throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
