--- a/application/raptor/rbac/rbac-alias.html
+++ b/application/raptor/rbac/rbac-alias.html
@@ -120,8 +120,8 @@
                     body: formData
                 }
             ).then(res => {
-                let contentType = res.headers.get('content-type');
-                if (contentType.indexOf('application/json') !== -1) {
+                let contentType = res.headers.get('content-type') || '';
+                if (contentType.includes('application/json')) {
                     return res.json();
                 }
                 throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
