--- a/application/raptor/user/user-index.html
+++ b/application/raptor/user/user-index.html
@@ -41,8 +41,8 @@
         fetch(
             `{{ 'users-list'|link }}`
         ).then(res => {
-            let contentType = res.headers.get('content-type');
-            if (contentType.indexOf('application/json') !== -1) {
+            let contentType = res.headers.get('content-type') || '';
+            if (contentType.includes('application/json')) {
                 return res.json();
             }
             throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
